updated the tokenisation step ints are now digit wise

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -8405,6 +8405,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "127b4391",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(\"datasets/taylor_dataset_100k.json\") as f:\n",
+    "    raw_data = json.load(f)\n",
+    "\n",
+    "from dataset import DualBPETokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d0145fb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# raw_data[0][\"taylor_prefix\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "da96f11f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataset import DualBPETokenizer\n",
+    "tokenizer = DualBPETokenizer(num_merges=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dd12baef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'<PAD>': 0,\n",
+       " '<SOS>': 1,\n",
+       " '<EOS>': 2,\n",
+       " '<UNK>': 3,\n",
+       " '-': 4,\n",
+       " '0': 5,\n",
+       " '1': 6,\n",
+       " '2': 7,\n",
+       " '3': 8,\n",
+       " '4': 9,\n",
+       " '5': 10,\n",
+       " '6': 11,\n",
+       " '7': 12,\n",
+       " '8': 13,\n",
+       " '9': 14,\n",
+       " 'add': 15,\n",
+       " 'div': 16,\n",
+       " 'mul': 17,\n",
+       " 'pow': 18,\n",
+       " 'x': 19}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "tokenizer.fit(\"datasets/taylor_dataset_100k.json\")\n",
+    "tokenizer.output_tokenizer.vocab\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f92176dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tokenizer.input_tokenizer.vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "e2776bb9",
    "metadata": {},
@@ -8413,80 +8500,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset size: 1000 samples\n",
+      "Dataset size: 100000 samples\n",
       "================================================================================\n",
       "\n",
-      "num_merges=0, input_vocab_size=28, output_vocab_size=153\n",
+      "num_merges=0, input_vocab_size=32, output_vocab_size=20\n",
       "  [Input]\n",
       "  Vocab used: 28, rare tokens (<5 occurrences): 0 (0%)\n",
-      "  Avg length: 9.9, Max: 43\n",
+      "  Avg length: 12.9, Max: 49\n",
       "  [Output]\n",
-      "  Vocab used: 153, rare tokens (<5 occurrences): 107 (70%)\n",
-      "  Avg length: 13.3, Max: 31\n",
+      "  Vocab used: 16, rare tokens (<5 occurrences): 0 (0%)\n",
+      "  Avg length: 17.2, Max: 46\n",
       "  ------------------------------------------------------------\n",
       "\n",
-      "num_merges=10, input_vocab_size=38, output_vocab_size=162\n",
+      "num_merges=5, input_vocab_size=37, output_vocab_size=20\n",
+      "  [Input]\n",
+      "  Vocab used: 33, rare tokens (<5 occurrences): 0 (0%)\n",
+      "  Avg length: 10.9, Max: 45\n",
+      "  [Output]\n",
+      "  Vocab used: 16, rare tokens (<5 occurrences): 0 (0%)\n",
+      "  Avg length: 17.2, Max: 46\n",
+      "  ------------------------------------------------------------\n",
+      "\n",
+      "num_merges=10, input_vocab_size=42, output_vocab_size=20\n",
       "  [Input]\n",
       "  Vocab used: 38, rare tokens (<5 occurrences): 0 (0%)\n",
-      "  Avg length: 7.9, Max: 39\n",
+      "  Avg length: 10.2, Max: 40\n",
       "  [Output]\n",
-      "  Vocab used: 161, rare tokens (<5 occurrences): 107 (66%)\n",
-      "  Avg length: 7.6, Max: 19\n",
+      "  Vocab used: 16, rare tokens (<5 occurrences): 0 (0%)\n",
+      "  Avg length: 17.2, Max: 46\n",
       "  ------------------------------------------------------------\n",
       "\n",
-      "num_merges=25, input_vocab_size=53, output_vocab_size=177\n",
+      "num_merges=25, input_vocab_size=57, output_vocab_size=20\n",
       "  [Input]\n",
       "  Vocab used: 53, rare tokens (<5 occurrences): 0 (0%)\n",
-      "  Avg length: 6.9, Max: 33\n",
+      "  Avg length: 9.1, Max: 35\n",
       "  [Output]\n",
-      "  Vocab used: 176, rare tokens (<5 occurrences): 108 (61%)\n",
-      "  Avg length: 6.0, Max: 16\n",
+      "  Vocab used: 16, rare tokens (<5 occurrences): 0 (0%)\n",
+      "  Avg length: 17.2, Max: 46\n",
       "  ------------------------------------------------------------\n",
       "\n",
-      "num_merges=50, input_vocab_size=78, output_vocab_size=202\n",
+      "num_merges=50, input_vocab_size=82, output_vocab_size=20\n",
       "  [Input]\n",
       "  Vocab used: 78, rare tokens (<5 occurrences): 0 (0%)\n",
-      "  Avg length: 6.2, Max: 31\n",
+      "  Avg length: 8.1, Max: 33\n",
       "  [Output]\n",
-      "  Vocab used: 201, rare tokens (<5 occurrences): 108 (54%)\n",
-      "  Avg length: 5.1, Max: 13\n",
-      "  ------------------------------------------------------------\n",
-      "\n",
-      "num_merges=100, input_vocab_size=128, output_vocab_size=252\n",
-      "  [Input]\n",
-      "  Vocab used: 128, rare tokens (<5 occurrences): 0 (0%)\n",
-      "  Avg length: 5.4, Max: 25\n",
-      "  [Output]\n",
-      "  Vocab used: 251, rare tokens (<5 occurrences): 109 (43%)\n",
-      "  Avg length: 4.4, Max: 13\n",
-      "  ------------------------------------------------------------\n",
-      "\n",
-      "num_merges=200, input_vocab_size=228, output_vocab_size=352\n",
-      "  [Input]\n",
-      "  Vocab used: 228, rare tokens (<5 occurrences): 3 (1%)\n",
-      "  Avg length: 4.7, Max: 22\n",
-      "  [Output]\n",
-      "  Vocab used: 351, rare tokens (<5 occurrences): 114 (32%)\n",
-      "  Avg length: 3.7, Max: 13\n",
-      "  ------------------------------------------------------------\n",
-      "\n",
-      "num_merges=500, input_vocab_size=527, output_vocab_size=637\n",
-      "  [Input]\n",
-      "  Vocab used: 527, rare tokens (<5 occurrences): 312 (59%)\n",
-      "  Avg length: 3.9, Max: 18\n",
-      "  [Output]\n",
-      "  Vocab used: 630, rare tokens (<5 occurrences): 442 (70%)\n",
-      "  Avg length: 2.9, Max: 11\n",
-      "  ------------------------------------------------------------\n",
-      "\n",
-      "num_merges=1000, input_vocab_size=772, output_vocab_size=876\n",
-      "  [Input]\n",
-      "  Vocab used: 770, rare tokens (<5 occurrences): 593 (77%)\n",
-      "  Avg length: 3.3, Max: 14\n",
-      "  [Output]\n",
-      "  Vocab used: 860, rare tokens (<5 occurrences): 747 (87%)\n",
-      "  Avg length: 2.3, Max: 11\n",
+      "  Vocab used: 16, rare tokens (<5 occurrences): 0 (0%)\n",
+      "  Avg length: 17.2, Max: 46\n",
       "  ------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 45\u001b[39m\n\u001b[32m     43\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m num_merges \u001b[38;5;129;01min\u001b[39;00m [\u001b[32m0\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m10\u001b[39m, \u001b[32m25\u001b[39m, \u001b[32m50\u001b[39m, \u001b[32m100\u001b[39m, \u001b[32m200\u001b[39m, \u001b[32m500\u001b[39m]:\n\u001b[32m     44\u001b[39m     tokenizer = DualBPETokenizer(num_merges=num_merges)\n\u001b[32m---> \u001b[39m\u001b[32m45\u001b[39m     \u001b[43mtokenizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdatasets/taylor_dataset_100k.json\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     47\u001b[39m     input_vocab = \u001b[38;5;28mlen\u001b[39m(tokenizer.input_tokenizer.vocab)\n\u001b[32m     48\u001b[39m     output_vocab = \u001b[38;5;28mlen\u001b[39m(tokenizer.output_tokenizer.vocab)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/gsoc/task/dataset.py:285\u001b[39m, in \u001b[36mDualBPETokenizer.fit\u001b[39m\u001b[34m(self, json_path)\u001b[39m\n\u001b[32m    283\u001b[39m input_seqs  = [item[\u001b[33m\"\u001b[39m\u001b[33mfunction_prefix\u001b[39m\u001b[33m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m raw_data]\n\u001b[32m    284\u001b[39m output_seqs = [item[\u001b[33m\"\u001b[39m\u001b[33mtaylor_prefix\u001b[39m\u001b[33m\"\u001b[39m]   \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m raw_data]\n\u001b[32m--> \u001b[39m\u001b[32m285\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43minput_tokenizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_seqs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    286\u001b[39m \u001b[38;5;28mself\u001b[39m.output_tokenizer.fit(output_seqs)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/gsoc/task/dataset.py:91\u001b[39m, in \u001b[36mWordLevelBPETokenizer.fit\u001b[39m\u001b[34m(self, sequences)\u001b[39m\n\u001b[32m     88\u001b[39m corpus = [s.split() \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m sequences \u001b[38;5;28;01mif\u001b[39;00m s.split()]\n\u001b[32m     90\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m.num_merges):\n\u001b[32m---> \u001b[39m\u001b[32m91\u001b[39m     stats = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_stats\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcorpus\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     92\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m stats:\n\u001b[32m     93\u001b[39m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/gsoc/task/dataset.py:62\u001b[39m, in \u001b[36mWordLevelBPETokenizer._get_stats\u001b[39m\u001b[34m(self, corpus)\u001b[39m\n\u001b[32m     60\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m token_list \u001b[38;5;129;01min\u001b[39;00m corpus:\n\u001b[32m     61\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(token_list) - \u001b[32m1\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m62\u001b[39m         pairs[(token_list[i], token_list[i + \u001b[32m1\u001b[39m])] += \u001b[32m1\u001b[39m\n\u001b[32m     63\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m pairs\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
@@ -8524,8 +8598,8 @@
     "    print(f\"  Avg length: {sum(lengths)/len(lengths):.1f}, Max: {max(lengths)}\")\n",
     "\n",
     "\n",
-    "json_path = \"taylor_dataset_sample.json\"\n",
-    "raw_data = json.load(open(json_path))\n",
+    "# json_path = \"taylor_dataset_sample.json\"\n",
+    "# raw_data = json.load(open(json_path))\n",
     "\n",
     "input_sequences = [item[\"function_prefix\"] for item in raw_data]\n",
     "output_sequences = [item[\"taylor_prefix\"] for item in raw_data]\n",
@@ -8533,9 +8607,9 @@
     "print(f\"Dataset size: {len(raw_data)} samples\")\n",
     "print(f\"{'='*80}\")\n",
     "\n",
-    "for num_merges in [0, 10, 25, 50, 100, 200, 500, 1000]:\n",
+    "for num_merges in [0, 5, 10, 25, 50, 100, 200, 500]:\n",
     "    tokenizer = DualBPETokenizer(num_merges=num_merges)\n",
-    "    tokenizer.fit(json_path)\n",
+    "    tokenizer.fit(\"datasets/taylor_dataset_100k.json\")\n",
     "\n",
     "    input_vocab = len(tokenizer.input_tokenizer.vocab)\n",
     "    output_vocab = len(tokenizer.output_tokenizer.vocab)\n",
@@ -8914,7 +8988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "397a72af",
    "metadata": {},
    "outputs": [
@@ -9404,8 +9478,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "aeac7ce2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataset import TaylorDataset\n",
+    "from dataset import DualBPETokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ca0d8add",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = DualBPETokenizer(num_merges=100)\n",
+    "tokenizer.load(\"model/dual_bpe_tokenizer_100k.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ba917e3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'<PAD>': 0,\n",
+       " '<SOS>': 1,\n",
+       " '<EOS>': 2,\n",
+       " '<UNK>': 3,\n",
+       " '-1': 4,\n",
+       " '-1 x': 5,\n",
+       " '-2': 6,\n",
+       " '-2 x': 7,\n",
+       " '-3': 8,\n",
+       " '-3 x': 9,\n",
+       " '-4': 10,\n",
+       " '-4 x': 11,\n",
+       " '-5': 12,\n",
+       " '1': 13,\n",
+       " '1 x': 14,\n",
+       " '2': 15,\n",
+       " '2 x': 16,\n",
+       " '2 x mul': 17,\n",
+       " '3': 18,\n",
+       " '3 x': 19,\n",
+       " '4': 20,\n",
+       " '4 x': 21,\n",
+       " '5': 22,\n",
+       " '5 x': 23,\n",
+       " '6': 24,\n",
+       " 'add': 25,\n",
+       " 'add add': 26,\n",
+       " 'add mul': 27,\n",
+       " 'add sub': 28,\n",
+       " 'add x': 29,\n",
+       " 'add x mul': 30,\n",
+       " 'add x x': 31,\n",
+       " 'asin': 32,\n",
+       " 'asin mul': 33,\n",
+       " 'asin x': 34,\n",
+       " 'asinh': 35,\n",
+       " 'asinh mul': 36,\n",
+       " 'asinh x': 37,\n",
+       " 'atan': 38,\n",
+       " 'atan mul': 39,\n",
+       " 'atan x': 40,\n",
+       " 'cos': 41,\n",
+       " 'cos mul': 42,\n",
+       " 'cosh': 43,\n",
+       " 'cosh mul': 44,\n",
+       " 'div': 45,\n",
+       " 'exp': 46,\n",
+       " 'exp mul': 47,\n",
+       " 'log': 48,\n",
+       " 'mul': 49,\n",
+       " 'mul div': 50,\n",
+       " 'mul mul': 51,\n",
+       " 'pow': 52,\n",
+       " 'pow x': 53,\n",
+       " 'pow x 2': 54,\n",
+       " 'pow x 3': 55,\n",
+       " 'sin': 56,\n",
+       " 'sin mul': 57,\n",
+       " 'sin x': 58,\n",
+       " 'sinh': 59,\n",
+       " 'sinh mul': 60,\n",
+       " 'sinh x': 61,\n",
+       " 'sub': 62,\n",
+       " 'sub add': 63,\n",
+       " 'sub mul': 64,\n",
+       " 'sub sub': 65,\n",
+       " 'sub x': 66,\n",
+       " 'sub x mul': 67,\n",
+       " 'tan': 68,\n",
+       " 'tan mul': 69,\n",
+       " 'tan x': 70,\n",
+       " 'tanh': 71,\n",
+       " 'tanh mul': 72,\n",
+       " 'tanh x': 73,\n",
+       " 'x': 74,\n",
+       " 'x add': 75,\n",
+       " 'x mul': 76,\n",
+       " 'x mul mul': 77,\n",
+       " 'x sub': 78,\n",
+       " 'x x': 79,\n",
+       " 'x x mul': 80,\n",
+       " 'x x x': 81}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.input_tokenizer.vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "349e11f3",
    "metadata": {},
    "outputs": [],
    "source": []
