added code for skeleton method

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -9602,8 +9602,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "349e11f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(\"datasets/taylor_dataset_100k.json\") as f:\n",
+    "    raw_data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9b172f01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example 78242:\n",
+      "  function_infix: 'x*(x + cosh(x) - atan(tan(x))) + 2*x'\n",
+      "  function_prefix  : 'add add mul x add cosh x sub x atan tan x x x'\n",
+      "  taylor_prefix    : 'add mul div 1 2 pow x 3 mul 3 x'\n",
+      "  taylor_series    : '(3)*x + (1/2)*x**3'\n",
+      "Example 21470:\n",
+      "  function_infix: '-x**2*(x - 3) + 3*x'\n",
+      "  function_prefix  : 'sub x add mul -2 x mul add -3 x mul x x'\n",
+      "  taylor_prefix    : 'add add mul -1 pow x 3 mul 3 x mul 3 pow x 2'\n",
+      "  taylor_series    : '(3)*x + (3)*x**2 -x**3'\n",
+      "Example 47202:\n",
+      "  function_infix: 'cosh(2*sin(x))'\n",
+      "  function_prefix  : 'cosh mul sin x 2'\n",
+      "  taylor_prefix    : 'add 1 mul 2 pow x 2'\n",
+      "  taylor_series    : '1 + (2)*x**2'\n",
+      "Example 45544:\n",
+      "  function_infix: 'x*(3*x - exp(x)) + 5'\n",
+      "  function_prefix  : 'add add sub x mul 1 x 5 mul x sub mul 3 x exp x'\n",
+      "  taylor_prefix    : 'add add add add 5 mul -1 x mul 2 pow x 2 mul div -1 2 pow x 3 mul div -1 6 pow x 4'\n",
+      "  taylor_series    : '5 -x + (2)*x**2 + (-1/2)*x**3 + (-1/6)*x**4'\n",
+      "Example 42553:\n",
+      "  function_infix: '11*x*tan(x)'\n",
+      "  function_prefix  : 'add mul tan x add add x mul 5 x x mul tan x mul 4 x'\n",
+      "  taylor_prefix    : 'add mul 11 pow x 2 mul div 11 3 pow x 4'\n",
+      "  taylor_series    : '(11)*x**2 + (11/3)*x**4'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "for _ in range(5):\n",
+    "    idx = random.randint(0, len(raw_data) - 1)\n",
+    "    print(f\"Example {idx}:\")\n",
+    "    print(f\"  function_infix: {raw_data[idx]['function_infix']!r}\") \n",
+    "    print(f\"  function_prefix  : {raw_data[idx]['function_prefix']!r}\")\n",
+    "    print(f\"  taylor_prefix    : {raw_data[idx]['taylor_prefix']!r}\")\n",
+    "    print(f\"  taylor_series    : {raw_data[idx]['taylor_series']!r}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0e9f0115",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['function_infix', 'function_prefix', 'taylor_series', 'taylor_prefix', 'taylor_sympy', 'order', 'point', 'num_nodes'])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data[4].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5876228c",
    "metadata": {},
    "outputs": [],
    "source": []
